# smschatgpt

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.daemon  Jenkinsfile  README.md  pyproject.toml
docs/: architecture.md
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.example.yaml
sms_chatgpt/: __init__.py  config.py  daemon.py  diagnose_adb.py  diagnose_modem.py  k8s.py  llm.py  messages.py  poll_manager.py  poll_worker.py  polls.py  sms.py  worker.py
tests/: test_messages.py
