[project]
name = "sms-chatgpt"
version = "0.1.0"
description = "USB SMS daemon that creates short-lived Kubernetes chat pods per sender."
requires-python = ">=3.11"
dependencies = [
  "kubernetes>=29.0.0",
  "openai>=1.40.0",
  "pyserial>=3.5",
  "python-dotenv>=1.0.1",
]

[project.scripts]
sms-chatgpt-daemon = "sms_chatgpt.daemon:main"
sms-chatgpt-worker = "sms_chatgpt.worker:main"
sms-chatgpt-poll-worker = "sms_chatgpt.poll_worker:main"
sms-chatgpt-diagnose-modem = "sms_chatgpt.diagnose_modem:main"
sms-chatgpt-diagnose-adb = "sms_chatgpt.diagnose_adb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
